# using_parameters_instead

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
scratch/: notebook.ipynb
src/using_parameters_instead/: __init__.py  formula.py  model.py  plotting.py  statistics.py  summary.py
tests/: __init__.py  test_using_parameters_instead.py
