[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "using_parameters_instead"
version = "0.1.0"
description = "Differential Expression Testing using each specimen's fitted intercept as opposed to using group as a covariate."
readme = "README.rst"
authors = [
  {name = "James Haberberger", email = "jhaberbe@stanford.edu"}
]
maintainers = [
  {name = "James Haberberger", email = "jhaberbe@stanford.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/jhaberbe/using_parameters_instead/issues"
changelog = "https://github.com/jhaberbe/using_parameters_instead/blob/master/changelog.md"
homepage = "https://github.com/jhaberbe/using_parameters_instead"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

